--- a/diy/static/style_.css
+++ b/diy/static/style_.css
@@ -56,7 +56,13 @@ hr {
 
 p, blockquote, ul, ol, dl, li, table, pre {
     margin: .5em 0;
-    line-height: 1.2em;
+    line-height: 1.25em;
+}
+
+code, pre {
+    border-radius: 3px;
+    background-color: #F8F8F8;
+    color: inherit;
 }
 
 a {
@@ -88,10 +94,16 @@ form {
     color: #777777;
 }
 
+#pagetitle {
+    padding-bottom: 2px;
+    border-bottom: 1px solid #EEEEEE;
+    font-size: 2em;
+}
+
 textarea {
-    width: 100%;
-    height: 25em;
-    font-size: 1em;
+    width: 95%;
+    height: 20em;
+    font-size: .9em;
 }
 
 .pure-form input[type=text], .pure-form input[type=password], .pure-form input[type=email], .pure-form input[type=url], .pure-form input[type=date], .pure-form input[type=month], .pure-form input[type=time], .pure-form input[type=datetime], .pure-form input[type=datetime-local], .pure-form input[type=week], .pure-form input[type=number], .pure-form input[type=search], .pure-form input[type=tel], .pure-form input[type=color], .pure-form select, .pure-form textarea {
@@ -154,6 +166,10 @@ article.news em, .noresult em {
 .pagination strong {
     color: white;
     background-color: #0080FF;
+}
+
+.translation p {
+    margin: .25em 0;
 }
 
 footer {
