--- a/diy/templates/clozeword.html
+++ b/diy/templates/clozeword.html
@@ -8,7 +8,7 @@
 <meta content="Gumble" name="author">
 <link rel="stylesheet" href="/static/style.css">
 <style>
-body{line-height:1.1em}h1{font-size:1.5em}h2{font-size:1.25em}#fl{border-width:0px 0px 1px;border-color:#333}#form{border-top:1px #38C solid;border-collapse:collapse;color:#000;padding-top:.5em;}tr.hd{background-color:#ACF}a,a:visited{text-decoration:none;color:#03E}footer{font-size:0.75em}
+body{line-height:1.25em}h1{font-size:1.5em}h2{font-size:1.25em}#fl{border-width:0px 0px 1px;border-color:#333;background-color:whitesmoke;padding:1px .2em;}#form{border-top:1px #38C solid;border-collapse:collapse;color:#000;padding-top:.5em;}th{background-color:#ACF}a,a:visited{text-decoration:none;color:#03E}footer{font-size:0.75em}
 </style>
 </head>
 <body>
@@ -20,7 +20,7 @@ body{line-height:1.1em}h1{font-size:1.5em}h2{font-size:1.25em}#fl{border-width:0
 <form action="/clozeword/" method="get"><p id="form">
 请输入查询字符（首字母等）：
 <input id="fl" type="text" name="fl" size="5" maxlength="5" pattern="-?[A-z]{1,4}" autofocus="autofocus" required="required" value="{{ fl }}">
-<br>根据上下文推测的词性：
+根据上下文推测的词性：
 <select name="sp" id="sp">
 <option value="un">不知道</option>
 <option value="n">n. 名词</option>
@@ -34,12 +34,13 @@ body{line-height:1.1em}h1{font-size:1.5em}h2{font-size:1.25em}#fl{border-width:0
 <option value="int">int. 感叹词</option>
 <option value="aux">aux. 情态动词</option>
 <!--<option value="num">num. 数词</option>--></select>
-<br><input id="pr" type="checkbox" name="pr" value="p">查询包含以选定首字母开头单词的词组
-<br><input type="submit" value="查询">
+<br>
+<input id="pr" type="checkbox" name="pr" value="p">查询包含以选定首字母开头单词的词组
+<input type="submit" value="查询">
 </p></form>
 {{ result }}
 <footer>
 <strong>注意：</strong>请尽量在实在做不出时使用，避免产生依赖性，请勿滥用。<br>
-资料来源：<a href="jmwords.htm">2012年上海市初中毕业统一学业考试考试手册</a>（修正）<br>
+资料来源：<a href="/static/jmwords.htm">2012年上海市初中毕业统一学业考试考试手册</a>（修正）<br>
 </footer>
 </body></html>
