--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -4,32 +4,32 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Language" content="zh-cn">
 <title>文言文机器翻译</title>
-<link rel="stylesheet" href="pure-min.css">
-<link rel="stylesheet" href="grids-responsive-min.css">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
 <h1>文言文机器翻译</h1>
-<div class="pure-g">
+</header>
+<section class="pure-g">
 <div class="pure-u-1 pure-u-md-1-2">
 	<form class="pure-form" action="app" method="POST">
 	<h2>原文</h2>
 	<p>
-	<textarea name="input">{{tinput}}</textarea>
+	<textarea name="input">{{ tinput }}</textarea>
 	</p><p>
 	<div class="pure-g">
 	<div class="pure-u-2-3">
 	<label for="option-c2m" style="margin: 0 1em;">
-	<input id="option-c2m" type="radio" name="lang" value="c2m" checked>
+	<input id="option-c2m" type="radio" name="lang" value="c2m"{{ ischecked }}>
 	文言文→现代文
-    </label>
-    <label for="option-m2c" style="margin: 0 1em;">
-	<input id="option-m2c" type="radio" name="lang" value="m2c">
+	</label>
+	<label for="option-m2c" style="margin: 0 1em;">
+	<input id="option-m2c" type="radio" name="lang" value="m2c"{{ ischecked }}>
 	现代文→文言文
-    </label>
-    </div>
-    <div class="pure-u-1-3">
-    <button type="submit" class="pure-button pure-button-primary" style='width: 80%;'>翻译</button>
+	</label>
+	</div>
+	<div class="pure-u-1-3">
+	<button type="submit" class="pure-button pure-button-primary" style='width: 80%;'>翻译</button>
 	</div>
 	</div>
 	</p>
@@ -37,8 +37,8 @@
 </div>
 <div class="pure-u-1 pure-u-md-1-2">
 	<h2>译文</h2>
-	<p class="translation indent">{{!toutput}}</p>
+	<article class="translation indent">{{ toutput }}</article>
 </div>
-</div>
+</section>
 </body>
 </html>
