--- a/diy/templates/cut_form.html
+++ b/diy/templates/cut_form.html
@@ -1,30 +1,33 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Jieba Demo Site</title>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta http-equiv="Content-Language" content="zh-cn">
+<title>Jieba Demo Site</title>
+<link rel="stylesheet" href="style.css">
+<style type="text/css">
+#Top{
+	text-align: center;
+	background-color: #000000;
+	color: #ffffff;
+	height: 30px;
+}
+
+#Wrapper{
+	text-align: center;
+}
+
+#Content{
+	width: 960px;
+	margin: 0 auto 0 auto;
+}
+
+#Bottom{
+	text-align: center;
+}
+</style>
 </head>
 <body>
-<style type="text/css">
-	#Top{
-		text-align: center;
-		background-color: #000000;
-		color: #ffffff;
-		height: 30px;
-	}
-
-	#Wrapper{
-		text-align: center;
-	}
-
-	#Content{
-		width: 960px;
-		margin: 0 auto 0 auto;
-	}
-
-	#Bottom{
-		text-align: center;
-	}
-</style>
-
 <div id="Top">
 	<h2>Demo of Jieba</h2>
 </div>
@@ -35,13 +38,13 @@
 			<textarea rows="15" cols="100" name="text">{{ content }}</textarea>
 		</div>
 		<span>
-			<input type="radio" name="opt" value="1" {% selected(1) %}/>精确分词
+			<input type="radio" name="opt" value="1" {{ selected(1) }}/>精确分词
 		</span>
 		<span>
-			<input type="radio" name="opt" value="2" {% selected(2) %}/>搜索引擎分词
+			<input type="radio" name="opt" value="2" {{ selected(2) }}/>搜索引擎分词
 		</span>
 		<span>
-			<input type="radio" name="opt" value="3" {% selected(3) %}/>显示词性
+			<input type="radio" name="opt" value="3" {{ selected(3) }}/>文言文分词
 		</span>
 		<input type="submit" value="开始分词"/>
 		<input type="button" value="重置" onclick="javascript:window.location.href='/'"/>
