--- a/diy/templates/clozeword.html
+++ b/diy/templates/clozeword.html
@@ -19,7 +19,7 @@ body{line-height:1.25em}h1{font-size:1.5em}h2{font-size:1.25em}#fl{border-width:
 <br>数词由于数目繁多等原因，不提供查找，请根据上下文自行解决。</p>
 <form action="/clozeword/" method="get"><p id="form">
 请输入查询字符（首字母等）：
-<input id="fl" type="text" name="fl" size="5" maxlength="5" pattern="-?[A-z]{1,4}" autofocus="autofocus" required="required" value="{{ fl }}">
+<input id="fl" type="text" name="fl" size="5" maxlength="5" pattern="-?[A-z]{1,4}" autofocus="autofocus" value="{{ fl }}">
 根据上下文推测的词性：
 <select name="sp" id="sp">
 <option value="un">不知道</option>
