--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Language" content="zh-cn">
 <title>文言文机器翻译</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
 <header>
@@ -20,11 +20,11 @@
 	<div class="pure-g">
 	<div class="pure-u-2-3">
 	<label for="option-c2m" style="margin: 0 1em;">
-	<input id="option-c2m" type="radio" name="lang" value="c2m"{{ ischecked }}>
+	<input id="option-c2m" type="radio" name="lang" value="c2m"{{ ischecked[0] }}>
 	文言文→现代文
 	</label>
 	<label for="option-m2c" style="margin: 0 1em;">
-	<input id="option-m2c" type="radio" name="lang" value="m2c"{{ ischecked }}>
+	<input id="option-m2c" type="radio" name="lang" value="m2c"{{ ischecked[1] }}>
 	现代文→文言文
 	</label>
 	</div>
