--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Language" content="zh-cn">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>文言文机器翻译</title>
 <link rel="stylesheet" href="/static/style.css">
 </head>
@@ -12,7 +13,7 @@
 </header>
 <section class="pure-g">
 <div class="pure-u-1 pure-u-md-1-2">
-	<form class="pure-form" action="app" method="POST">
+	<form class="pure-form" action="/wenyan/" method="POST">
 	<h2>原文</h2>
 	<p>
 	<textarea name="input">{{ tinput }}</textarea>
