--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>文言文机器翻译</title>
 <link rel="stylesheet" href="/static/style.css">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/grids-responsive-min.css">
 </head>
 <body>
 <header>
