--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -4,7 +4,8 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>文言文机器翻译</title>
+<meta name="keywords" content="在线文言文翻译,文言文机器翻译,文言文翻译器,古文翻译">
+<title>在线文言文机器翻译</title>
 <link rel="stylesheet" href="/static/style.css">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/grids-responsive-min.css">
 </head>
