--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -8,6 +8,13 @@
 <title>在线文言文机器翻译</title>
 <link rel="stylesheet" href="/static/style.css">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/grids-responsive-min.css">
+<script>
+function autoGrow (oField) {
+var maxHeight = window.innerHeight - 400;
+if (oField.scrollHeight > oField.clientHeight) {
+oField.style.height = Math.min(oField.scrollHeight,maxHeight) + "px";
+}}
+</script>
 </head>
 <body>
 <header>
@@ -17,9 +24,9 @@
 <div class="pure-u-1 pure-u-md-1-2">
 	<form class="pure-form" action="/wenyan/" method="POST">
 	<h2>原文</h2>
-	<p>
-	<textarea name="input">{{ tinput }}</textarea>
-	</p><p>
+	<div>
+	<textarea name="input" onchange="autoGrow(this);">{{ tinput }}</textarea>
+	</div>
 	<div class="pure-g">
 	<div class="pure-u-2-3">
 	<label for="option-c2m" style="margin: 0 1em;">
@@ -35,7 +42,6 @@
 	<button type="submit" class="pure-button pure-button-primary" style='width: 80%;'>翻译</button>
 	</div>
 	</div>
-	</p>
 	</form>
 </div>
 <div class="pure-u-1 pure-u-md-1-2">
