--- a/diy/static/style_.css
+++ b/diy/static/style_.css
@@ -86,7 +86,7 @@ h1 > a, h1 > a:visited {
 }
 
 .indent {
-    text-indent: 2rem;
+    text-indent: 2em;
 }
 
 form {
@@ -103,11 +103,25 @@ form {
 textarea {
     width: 95%;
     height: 20em;
-    font-size: .9em;
+    line-height: 1.25em;
+    font-size: 14px;
 }
 
 .pure-form input[type=text], .pure-form input[type=password], .pure-form input[type=email], .pure-form input[type=url], .pure-form input[type=date], .pure-form input[type=month], .pure-form input[type=time], .pure-form input[type=datetime], .pure-form input[type=datetime-local], .pure-form input[type=week], .pure-form input[type=number], .pure-form input[type=search], .pure-form input[type=tel], .pure-form input[type=color], .pure-form select, .pure-form textarea {
     background-color: #FCFCFC;
+}
+
+#ctrlgroup {
+    margin-top: .5em;
+}
+
+#ctrlsubmit {
+    padding: .3em 1em;
+    width: 80%;
+}
+
+#ctrlradiog {
+    padding: .3em 0;
 }
 
 #searchform {
@@ -166,6 +180,10 @@ article.news em, .noresult em {
 .pagination strong {
     color: white;
     background-color: #0080FF;
+}
+
+.translation {
+    font-size: 14px;
 }
 
 .translation p {
