--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -10,10 +10,10 @@
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/grids-responsive-min.css">
 <script>
 function autoGrow (oField) {
-var maxHeight = window.innerHeight - 400;
 if (oField.scrollHeight > oField.clientHeight) {
-oField.style.height = Math.min(oField.scrollHeight+10,maxHeight) + "px";
+oField.style.height = oField.scrollHeight + oField.clientTop*2 + "px";
 }}
+window.onload = function(){autoGrow(document.getElementById('tinput'))}
 </script>
 </head>
 <body>
@@ -27,8 +27,8 @@ oField.style.height = Math.min(oField.scrollHeight+10,maxHeight) + "px";
 	<div>
 	<textarea id="tinput" name="input" onchange="autoGrow(this);">{{ tinput }}</textarea>
 	</div>
-	<div class="pure-g">
-	<div class="pure-u-2-3">
+	<div class="pure-g" id="ctrlgroup">
+	<div class="pure-u-2-3" id="ctrlradiog">
 	<label for="option-c2m" style="margin: 0 1em;">
 	<input id="option-c2m" type="radio" name="lang" value="c2m"{{ ischecked[0] }}>
 	文言文→现代文
@@ -39,7 +39,7 @@ oField.style.height = Math.min(oField.scrollHeight+10,maxHeight) + "px";
 	</label>
 	</div>
 	<div class="pure-u-1-3">
-	<button type="submit" class="pure-button pure-button-primary" style='width: 80%;'>翻译</button>
+	<button type="submit" class="pure-button pure-button-primary" id="ctrlsubmit">翻译</button>
 	</div>
 	</div>
 	</form>
@@ -49,8 +49,5 @@ oField.style.height = Math.min(oField.scrollHeight+10,maxHeight) + "px";
 	<article class="translation indent">{{ toutput }}</article>
 </div>
 </section>
-<script>
-window.onload = function(){autoGrow(document.getElementById('tinput'))}
-</script>
 </body>
 </html>
