--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -22,7 +22,7 @@ window.onload = function(){autoGrow(document.getElementById('tinput'))}
 </header>
 <section class="pure-g">
 <div class="pure-u-1 pure-u-md-1-2">
-	<form class="pure-form" action="/wenyan/" method="POST">
+	<form class="pure-form" action="{{ action }}" method="POST">
 	<h2>原文</h2>
 	<div>
 	<textarea id="tinput" name="input" onchange="autoGrow(this);">{{ tinput }}</textarea>
