new style; use msgpack

--- a/diy/templates/cut_form.html
+++ b/diy/templates/cut_form.html
@@ -4,8 +4,8 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Jieba Demo Site</title>
-<link rel="stylesheet" href="style.css">
+<title>结巴分词演示</title>
+<link rel="stylesheet" href="style.m.css">
 <style type="text/css">
 #Top{
 text-align: center;
@@ -24,7 +24,7 @@ textarea{width: 100%;}
 </head>
 <body>
 <div id="Top">
-	<h2>Demo of Jieba</h2>
+	<h2>结巴分词演示</h2>
 </div>
 <div id="Wrapper">
 	<div id="Content">
