--- a/diy/templates/clozeword.html
+++ b/diy/templates/clozeword.html
@@ -7,9 +7,9 @@
 <link rel="shortcut icon" href="/static/favicon.png">
 <title>首字母填空助手</title>
 <meta content="Gumble" name="author">
-<link rel="stylesheet" href="/static/style.css">
+<link rel="stylesheet" href="/static/style.m.css">
 <style>
-body{line-height:1.25em}h1{font-size:1.5em}h2{font-size:1.25em}#fl{border-width:0px 0px 1px;border-color:#333;background-color:whitesmoke;padding:1px .2em;}#form{border-top:1px #38C solid;border-collapse:collapse;color:#000;padding-top:.5em;}th{background-color:#ACF}a,a:visited{text-decoration:none;color:#03E}footer{font-size:0.75em}
+body{line-height:1.25em}h1{font-size:1.5em}h2{font-size:1.25em}table{border-collapse:collapse;border-spacing:0}#fl{border-width:0px 0px 1px;border-color:#333;background-color:whitesmoke;padding:1px .2em;}#form{border-top:1px #38C solid;border-collapse:collapse;color:#000;padding-top:.5em;}th{background-color:#ACF}a,a:visited{text-decoration:none;color:#03E}footer{font-size:0.75em}
 </style>
 </head>
 <body>
