--- a/diy/templates/news.html
+++ b/diy/templates/news.html
@@ -6,7 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="/static/favicon.png" />
 <title>新闻存档搜索</title>
-<link rel="stylesheet" href="/static/style.css">
+<link rel="stylesheet" href="/static/pure.m.css">
+<link rel="stylesheet" href="/static/style.m.css">
 <script async="async" src="/static/base64.min.js" type="text/javascript"></script>
 <script>
 function encodeb64(){
