--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -5,8 +5,9 @@
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="在线文言文翻译,文言文机器翻译,文言文翻译器,古文翻译">
-<title>在线文言文机器翻译</title>
-<link rel="stylesheet" href="/static/style.css">
+<title>文言文在线翻译</title>
+<link rel="stylesheet" href="/static/pure.m.css">
+<link rel="stylesheet" href="/static/wenyan.m.css">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/grids-responsive-min.css">
 <script>
 function autoGrow (oField) {
@@ -17,37 +18,39 @@ window.onload = function(){autoGrow(document.getElementById('tinput'))}
 </script>
 </head>
 <body>
+<div id="container">
 <header>
-<h1>文言文机器翻译</h1>
+<h1 id="pagetitle">文言文翻译<span id="ver">测试版</span></h1>
 </header>
 <section class="pure-g">
 <div class="pure-u-1 pure-u-md-1-2">
-	<form class="pure-form" action="{{ action }}" method="POST">
+	<form id="translateform" action="{{ action }}" method="POST">
 	<h2>原文</h2>
 	<div>
 	<textarea id="tinput" name="input" onchange="autoGrow(this);">{{ tinput }}</textarea>
 	</div>
 	<div class="pure-g" id="ctrlgroup">
 	<div class="pure-u-2-3" id="ctrlradiog">
-	<label for="option-c2m" style="margin: 0 1em;">
+	<label for="option-c2m" class="ctrlradiolb">
 	<input id="option-c2m" type="radio" name="lang" value="c2m"{{ ischecked[0] }}>
 	文言文→现代文
 	</label>
-	<label for="option-m2c" style="margin: 0 1em;">
+	<label for="option-m2c" class="ctrlradiolb">
 	<input id="option-m2c" type="radio" name="lang" value="m2c"{{ ischecked[1] }}>
 	现代文→文言文
 	</label>
 	</div>
 	<div class="pure-u-1-3">
-	<button type="submit" class="pure-button pure-button-primary" id="ctrlsubmit">翻译</button>
+	<button type="submit" id="ctrlsubmit">翻译</button>
 	</div>
 	</div>
-	</form>
+	</form><!-- class="pure-button pure-button-primary"-->
 </div>
 <div class="pure-u-1 pure-u-md-1-2">
 	<h2>译文</h2>
-	<article class="translation indent">{{ toutput }}</article>
+	<article id="toutput">{{ toutput }}</article>
 </div>
 </section>
+</div>
 </body>
 </html>
