update jiebazhc model; style tweaks; ready for captcha; use timeout

--- a/diy/static/pure_.css
+++ b/diy/static/pure_.css
@@ -567,10 +567,10 @@ table {
 /*csslint regex-selectors:false, known-properties:false, duplicate-properties:false*/
 
 .pure-g {
-    letter-spacing: -0.31em; /* Webkit: collapse white-space between units */
-    *letter-spacing: normal; /* reset IE < 8 */
-    *word-spacing: -0.43em; /* IE < 8: collapse white-space between units */
-    text-rendering: optimizespeed; /* Webkit: fixes text-rendering: optimizeLegibility */
+    /*letter-spacing: -0.31em; /* Webkit: collapse white-space between units */
+    /**letter-spacing: normal; /* reset IE < 8 */
+    /**word-spacing: -0.43em; /* IE < 8: collapse white-space between units */
+    /*text-rendering: optimizespeed; /* Webkit: fixes text-rendering: optimizeLegibility */
 
     /*
     Sets the font stack to fonts known to work properly with the above letter
