--- a/diy/static/wenyan_.css
+++ b/diy/static/wenyan_.css
@@ -76,11 +76,11 @@ form {
     font-size: 14px;
     border: 1px solid #E6DFD6;
     min-height: 15em;
-    text-indent: 2em;
 }
 
 #toutput p {
-    margin: .25em 0;
+    margin-top: 0;
+    margin-bottom: .25em;
 }
 
 #ctrlgroup {
@@ -127,6 +127,11 @@ form {
     margin: 0 .3em;
     color: #665D52;
     display: inline-block;
+}
+
+#captcha {
+    font-size: .9em;
+    color: #222;
 }
 
 p.error {
