--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -43,6 +43,7 @@ window.onload = function(){autoGrow(document.getElementById('tinput'))}
 	<div class="pure-u-1-3">
 	<button type="submit" id="ctrlsubmit">翻译</button>
 	</div>
+	{{ captcha }}
 	</div>
 	</form><!-- class="pure-button pure-button-primary"-->
 </div>
