--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -31,6 +31,8 @@ window.onload = function(){autoGrow(document.getElementById('tinput'))}
 	</div>
 	<div class="pure-g" id="ctrlgroup">
 	<div class="pure-u-2-3" id="ctrlradiog">
+	自动识别翻译方向
+	<!--
 	<label for="option-c2m" class="ctrlradiolb">
 	<input id="option-c2m" type="radio" name="lang" value="c2m"{{ ischecked[0] }}>
 	文言文→现代文
@@ -38,7 +40,7 @@ window.onload = function(){autoGrow(document.getElementById('tinput'))}
 	<label for="option-m2c" class="ctrlradiolb">
 	<input id="option-m2c" type="radio" name="lang" value="m2c"{{ ischecked[1] }}>
 	现代文→文言文
-	</label>
+	</label>-->
 	</div>
 	<div class="pure-u-1-3">
 	<button type="submit" id="ctrlsubmit">翻译</button>
