--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -8,7 +8,7 @@
 <title>文言文在线翻译</title>
 <link rel="stylesheet" href="/static/pure.m.css">
 <link rel="stylesheet" href="/static/wenyan.m.css">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/grids-responsive-min.css">
+<link rel="stylesheet" href="/static/grids-responsive-min.css">
 <script>
 function autoGrow (oField) {
 if (oField.scrollHeight > oField.clientHeight) {
@@ -22,7 +22,7 @@ window.onload = function(){autoGrow(document.getElementById('tinput'))}
 <header>
 <h1 id="pagetitle">文言文翻译<span id="ver">测试版</span></h1>
 </header>
-<section class="pure-g">
+<section id="appmain" class="pure-g">
 <div class="pure-u-1 pure-u-md-1-2">
 	<form id="translateform" action="{{ action }}" method="POST">
 	<h2>原文</h2>
