--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cn">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<meta http-equiv="Content-Language" content="zh-cn">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="keywords" content="在线文言文翻译,文言文机器翻译,文言文翻译器,古文翻译">
+<meta name="keywords" content="文言文在线翻译,文言文机器翻译,文言文翻译器,古文翻译">
 <title>文言文在线翻译</title>
 <link rel="stylesheet" href="/static/pure.m.css">
 <link rel="stylesheet" href="/static/wenyan.m.css">
@@ -14,7 +13,16 @@ function autoGrow (oField) {
 if (oField.scrollHeight > oField.clientHeight) {
 oField.style.height = oField.scrollHeight + oField.clientTop*2 + "px";
 }}
-window.onload = function(){autoGrow(document.getElementById('tinput'))}
+window.onload = function(){
+autoGrow(document.getElementById('tinput'));
+{% if uncertain %}
+document.getElementById("changedir").onclick = function() {
+document.getElementById("hidden-lang").value = "{{ uncertain }}";
+document.getElementById("translateform").submit();
+return false;
+}
+{% endif %}
+}
 </script>
 </head>
 <body>
@@ -27,20 +35,12 @@ window.onload = function(){autoGrow(document.getElementById('tinput'))}
 	<form id="translateform" action="{{ action }}" method="POST">
 	<h2>原文</h2>
 	<div>
-	<textarea id="tinput" name="input" onchange="autoGrow(this);">{{ tinput }}</textarea>
+	<textarea id="tinput" name="input">{{ tinput }}</textarea>
 	</div>
 	<div class="pure-g" id="ctrlgroup">
 	<div class="pure-u-2-3" id="ctrlradiog">
-	自动识别翻译方向
-	<!--
-	<label for="option-c2m" class="ctrlradiolb">
-	<input id="option-c2m" type="radio" name="lang" value="c2m"{{ ischecked[0] }}>
-	文言文→现代文
-	</label>
-	<label for="option-m2c" class="ctrlradiolb">
-	<input id="option-m2c" type="radio" name="lang" value="m2c"{{ ischecked[1] }}>
-	现代文→文言文
-	</label>-->
+	<span id="ctrlauto">自动识别翻译方向</span>
+	<input id="hidden-lang" type="hidden" name="lang" value="auto">
 	</div>
 	<div class="pure-u-1-3">
 	<button type="submit" id="ctrlsubmit">翻译</button>
@@ -52,6 +52,9 @@ window.onload = function(){autoGrow(document.getElementById('tinput'))}
 <div class="pure-u-1 pure-u-md-1-2">
 	<h2>译文</h2>
 	<article id="toutput">{{ toutput }}</article>
+	{% if uncertain %}
+	<div id="wrongdir">翻译方向错误？<a href="#" id="changedir">点击重新翻译</a></div>
+	{% endif %}
 </div>
 </section>
 </div>
