add 403, 503; add 503 server; ban ip

--- a/diy/templates/e403.html
+++ b/diy/templates/e403.html
@@ -3,7 +3,8 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>500 Internal Server Error</title>
+<meta name="Robots" content="noindex,nofollow">
+<title>403 Forbidden</title>
 <style>
 body {
 font-family: sans-serif;
@@ -32,11 +33,11 @@ margin: 2em 0;
 </head>
 <body>
 <div id="container">
-<h1>内部服务器错误</h1>
-出了点小问题，请稍后重试。
+<h1>禁止访问</h1>
+您因为某些原因被禁止访问此网页。如果您是普通用户，请联系：exez at gumble dot tk。
 <hr>
-<h1>Internal Server Error</h1>
-The server encountered an internal error and was unable to complete your request. Either the server is overloaded or there is an error in the application.
+<h1>Forbidden</h1>
+You don't have the permission to access the requested resource. It is likely that you are banned by the admin. If you are a human, please contact the admin by email {exez at gumble dot tk}.
 </div>
 </body>
 </html>
