--- a/diy/templates/e503.html
+++ b/diy/templates/e503.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>500 Internal Server Error</title>
+<title>503 Service Unavailable</title>
 <style>
 body {
 font-family: sans-serif;
@@ -32,11 +32,11 @@ margin: 2em 0;
 </head>
 <body>
 <div id="container">
-<h1>内部服务器错误</h1>
-出了点小问题，请稍后重试。
+<h1>暂停服务</h1>
+正在执行例行维护，请稍后重试。
 <hr>
-<h1>Internal Server Error</h1>
-The server encountered an internal error and was unable to complete your request. Either the server is overloaded or there is an error in the application.
+<h1>Service Unavailable</h1>
+The server is temporarily unable to service your request due to maintenance downtime or capacity problems.  Please try again later.
 </div>
 </body>
 </html>
