--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -18,7 +18,7 @@
 </header>
 <section id="appmain" class="pure-g">
 <div class="pure-u-1 pure-u-md-1-2">
-	<form id="translateform" action="{{ action }}" method="POST">
+	<form id="translateform" method="POST">
 	<h2>原文</h2>
 	<textarea id="tinput" name="input">{{ tinput }}</textarea>
 	<div id="progressbar"></div>
