--- a/diy/templates/buka.html
+++ b/diy/templates/buka.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>布卡简易下载工具</title>
+<title>布卡漫画下载工具</title>
 <link rel="stylesheet" href="/static/pure.m.css">
 <link rel="stylesheet" href="/static/buka.m.css">
 {% if cinfo %}
@@ -26,7 +26,7 @@ document.getElementById("fgeturl").onsubmit = showwait;
 </head>
 <body>
 <div id="container">
-<h1>布卡简易下载工具</h1>
+<h1>布卡漫画下载工具</h1>
 <section id="app">
 <form class="pure-form" name="fgetinfo" method="GET">
 <fieldset>
