--- a/diy/templates/buka.html
+++ b/diy/templates/buka.html
@@ -71,6 +71,7 @@ document.getElementById("fgeturl").onsubmit = showwait;
 <label for="cselall">全选</label>
 <button type="submit" class="pure-button bukabutton buttonactive">获取下载地址</button><span id="plzwait">请稍候……</span>
 </form>
+<div id="opt"><a href="bukadownloader.zip">下载离线版 (Windows, 源代码)</a></div>
 {% endif %}
 {% if links %}
 <h2>说明：</h2>
