only distribute source; improve ban

--- a/diy/templates/buka_zhtw.html
+++ b/diy/templates/buka_zhtw.html
@@ -74,7 +74,7 @@ document.getElementById("fgeturl").onsubmit = showwait;
 <label for="cselall">全選</label>
 <button type="submit" class="pure-button bukabutton buttonactive">獲取下載地址</button><span id="plzwait">請稍候……</span>
 </form>
-<div id="opt"><a href="bukadownloader.zip">下載離線版 (Windows, 原始碼)</a></div>
+<div id="opt"><a href="bukadownloader.zip">下載原始碼</a></div>
 {% endif %}
 {% if links %}
 <h2>說明：</h2>
