cleanup code; error improvements

--- a/diy/templates/e403.html
+++ b/diy/templates/e403.html
@@ -34,10 +34,10 @@ margin: 2em 0;
 <body>
 <div id="container">
 <h1>禁止访问</h1>
-您因为某些原因被禁止访问此网页。如果您是普通用户，请联系：exez at gumble dot tk。
+您因为某些原因被禁止访问此网页。如果您是普通用户，并且没有滥用此服务，请联系：exez at gumble dot tk。
 <hr>
 <h1>Forbidden</h1>
-You don't have the permission to access the requested resource. It is likely that you are banned by the admin. If you are a human, please contact the admin by email {exez at gumble dot tk}.
+You don't have the permission to access the requested resource. It is likely that you are banned by the admin for some reasons. If you are a human and you haven't abused the service, please contact the admin by email: exez at gumble dot tk.
 </div>
 </body>
 </html>
