--- a/diy/templates/captcha.html
+++ b/diy/templates/captcha.html
@@ -1,20 +1,7 @@
 <div id="captcha" class="pure-u-1">
-<h3>请判断下列句子：</h3>
-<div class="pure-g">
-{% for i in sentences %}
-<p class="pure-u-2-3">{{ i[1] }}
+<p id="captcha-title">请输入图中字符：
+<input id="captcha-input" type="text" name="ca" maxlength="4">
 </p>
-<div id="crgroup" class="pure-u-1-3">
-<label for="cc-{{ i[0] }}" class="ctrlradiolb">
-<input id="cc-{{ i[0] }}" type="radio" name="{{ i[0] }}" value="0" required>
-文言文
-</label>
-<label for="cm-{{ i[0] }}" class="ctrlradiolb">
-<input id="cm-{{ i[0] }}" type="radio" name="{{ i[0] }}" value="1">
-现代文
-</label>
-</span>
-</div>
-{% endfor %}
-</div>
+<pre id="captcha-pic">{{ pic }}</pre>
+<input type="hidden" name="cq" value="{{ ans }}">
 </div>
