--- a/diy/templates/translate_zhtw.html
+++ b/diy/templates/translate_zhtw.html
@@ -8,8 +8,8 @@
 <link rel="stylesheet" href="/static/pure.m.css">
 <link rel="stylesheet" href="/static/wenyan.m.css">
 <link rel="stylesheet" href="/static/grids-responsive-min.css">
+<script>var c2mtxt = "文言文→現代文", m2ctxt = "現代文→文言文";</script>
 <script src="/static/wenyan.js"></script>
-{% if uncertain %}<script>languncertain = "{{ uncertain }}";</script>{% endif %}
 </head>
 <body>
 <div id="container">
@@ -24,8 +24,8 @@
 	<div id="progressbar"></div>
 	<div class="pure-g" id="ctrlgroup">
 	<div class="pure-u-2-3" id="ctrlradiog">
-	<span id="ctrlauto">自動識別翻譯方向</span>
-	<input id="hidden-lang" type="hidden" name="lang" value="auto">
+	<span id="ctrlauto">自動識別翻譯方向</span><a href="#" class="abutton" id="ctrlchange">切換</a>
+	<input id="hilang" type="hidden" name="lang" value="auto">
 	</div>
 	<div class="pure-u-1-3" id="ctrlsubmitdiv">
 	<button type="submit" id="ctrlsubmit">翻譯</button>
@@ -38,9 +38,6 @@
 	<div id="translateresult">
 	<h2>譯文</h2>
 	<article id="toutput">{{ toutput }}</article>
-	{% if uncertain %}
-	<div id="wrongdir">翻譯方向錯誤？<a href="#" id="changedir">點選重新翻譯</a></div>
-	{% endif %}
 	</div>
 </div>
 </section>
