force https js; use textContent and inline-block in language detect

--- a/diy/static/wenyan_.css
+++ b/diy/static/wenyan_.css
@@ -217,6 +217,7 @@ input[type="radio"]:invalid {
 .abutton, .abutton:visited {
     text-decoration: none;
     color: #8D7253;
+    display: inline-block;
 }
 
 .abutton:hover {
