--- a/diy/templates/captcha.html
+++ b/diy/templates/captcha.html
@@ -1,4 +1,4 @@
-<div id="captcha" class="pure-u-1">
+<div id="captcha">
 <p id="captcha-title">请输入图中字符：
 <input id="captcha-input" type="text" name="ca" maxlength="4">
 </p>
