--- a/diy/static/senc/style.css
+++ b/diy/static/senc/style.css
@@ -108,7 +108,19 @@ textarea {
     font-size: 1em;
 }
 
-.pure-form input[type=text], .pure-form input[type=password], .pure-form input[type=email], .pure-form input[type=url], .pure-form input[type=date], .pure-form input[type=month], .pure-form input[type=time], .pure-form input[type=datetime], .pure-form input[type=datetime-local], .pure-form input[type=week], .pure-form input[type=number], .pure-form input[type=search], .pure-form input[type=tel], .pure-form input[type=color], .pure-form select, .pure-form textarea {
-    background-color: #FCFCFC;
+input {
+	border-width: 0px 0px 2px;
+	border-style: solid; 
+	border-color: #CCC;
+    padding: .4em .5em;
 }
 
+textarea {
+	border-width: 1px solid #CCC;
+	border-radius: 2px;
+    padding: .5em;
+}
+
+input:focus, textarea:focus {
+    border-color: #19E
+}
