--- a/diy/static/wenyan_.css
+++ b/diy/static/wenyan_.css
@@ -109,6 +109,7 @@ input[type="radio"]:invalid {
     left: 0;
     top: 0;
     margin: 0;
+    white-space: pre-wrap;
     word-wrap: break-word;
     border: 1px solid transparent;
     color: transparent;
