--- a/diy/templates/clozeword.html
+++ b/diy/templates/clozeword.html
@@ -7,9 +7,22 @@
 <link rel="shortcut icon" href="/static/favicon.png">
 <title>首字母填空助手</title>
 <meta content="Gumble" name="author">
-<link rel="stylesheet" href="/static/style.m.css">
+<link rel="stylesheet" href="/static/min.css">
+<link rel="stylesheet" href="/static/style.css">
 <style>
-body{line-height:1.25em}h1{font-size:1.5em}h2{font-size:1.25em}table{border-collapse:collapse;border-spacing:0}#fl{border-width:0px 0px 1px;border-color:#333;background-color:whitesmoke;padding:1px .2em;}#form{border-top:1px #38C solid;border-collapse:collapse;color:#000;padding-top:.5em;}th{background-color:#ACF}a,a:visited{text-decoration:none;color:#03E}footer{font-size:0.75em}
+body{line-height:1.25em}
+h1{font-size:1.5em}
+h2{font-size:1.25em}
+.table{width:auto;border-collapse:collapse;border-spacing:0;border-color:white;}
+.table th,.table td{padding:.2em}
+#fl, select{border-width:0px 0px 2px;border-color:#CCC;padding:1px .2em;}
+#fl{width:5em}
+#fl:focus{border-color:#19E}
+#form{border-top:1px #38C solid;border-collapse:collapse;color:#000;padding-top:.5em;}
+th{background-color:#ACF}
+#sbtn{border:0;padding:.2em 1em;margin-left:1em;}
+a,a:visited{text-decoration:none;color:#03E}
+footer{font-size:0.75em}
 </style>
 </head>
 <body>
@@ -18,9 +31,9 @@ body{line-height:1.25em}h1{font-size:1.5em}h2{font-size:1.25em}table{border-coll
 </header>
 <p>这个实用工具通过检索（初中）词汇及词组表来帮助完成难度较大的首字母填空题。
 <br>数词由于数目繁多等原因，不提供查找，请根据上下文自行解决。</p>
-<form action="/clozeword/" method="get"><p id="form">
+<form action="/clozeword/" method="get" id="form"><p>
 请输入查询字符（首字母等）：
-<input id="fl" type="text" name="fl" size="5" maxlength="5" pattern="-?[A-z]{1,4}" autofocus="autofocus" value="{{ fl }}">
+<input id="fl" type="text" name="fl" maxlength="5" pattern="-?[A-z]{1,4}" autofocus="autofocus" value="{{ fl }}">
 根据上下文推测的词性：
 <select name="sp" id="sp">
 <option value="un">不知道</option>
@@ -35,9 +48,9 @@ body{line-height:1.25em}h1{font-size:1.5em}h2{font-size:1.25em}table{border-coll
 <option value="int">int. 感叹词</option>
 <option value="aux">aux. 情态动词</option>
 <!--<option value="num">num. 数词</option>--></select>
-<br>
-<input id="pr" type="checkbox" name="pr" value="p">查询包含以选定首字母开头单词的词组
-<input type="submit" value="查询">
+</p><p>
+<input id="pr" type="checkbox" name="pr" value="p"><label for="pr">查询包含以选定首字母开头单词的词组</label>
+<input type="submit" value="查询" id="sbtn" class="btn btn-a">
 </p></form>
 {{ result }}
 <footer>
