--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -5,9 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="文言文在线翻译,文言文机器翻译,文言文翻译器,古文翻译">
 <title>文言文在线翻译</title>
-<link rel="stylesheet" href="/static/pure.m.css">
-<link rel="stylesheet" href="/static/wenyan.m.css">
+<link rel="stylesheet" href="/static/min.css">
+<link rel="stylesheet" href="/static/wenyan.css">
+<!--
 <link rel="stylesheet" href="/static/grids-responsive-min.css">
+-->
 <script>var c2mtxt = "文言文→现代文", m2ctxt = "现代文→文言文";
 var talign = {{ talign|default('[]') }};</script>
 <script src="/static/wenyan.js"></script>
@@ -17,8 +19,8 @@ var talign = {{ talign|default('[]') }};</script>
 <header>
 <h1 id="pagetitle">文言文翻译<span id="ver">测试版</span></h1>
 </header>
-<section id="appmain" class="pure-g">
-<div class="pure-u-1 pure-u-md-1-2">
+<section id="appmain" class="row rmd">
+<div class="col c6">
 	<form id="translateform" method="POST">
 	<h2>原文</h2>
 	<div id="tinputgroup">
@@ -26,19 +28,19 @@ var talign = {{ talign|default('[]') }};</script>
 		<textarea id="tinput" name="input" spellcheck="false">{{ tinput }}</textarea>
 	</div>
 	<div id="progressbar"></div>
-	<div class="pure-g" id="ctrlgroup">
-	<div class="pure-u-2-3" id="ctrlradiog">
+	<div class="row" id="ctrlgroup">
+	<div class="col c8" id="ctrlradiog">
 	<span id="ctrlauto">自动识别翻译方向</span><a href="#" class="abutton" id="ctrlchange">切换</a>
 	<input id="hilang" type="hidden" name="lang" value="auto">
 	</div>
-	<div class="pure-u-1-3" id="ctrlsubmitdiv">
+	<div class="col c4" id="ctrlsubmitdiv">
 	<button type="submit" id="ctrlsubmit">翻译</button>
 	</div>
 	{{ captcha }}
 	</div>
 	</form>
 </div>
-<div class="pure-u-1 pure-u-md-1-2">
+<div class="col c6">
 	<div id="translateresult">
 	<h2>译文</h2>
 	<article id="toutput">{{ toutput }}</article>
